--- a/clean-code-s1e1/style.css
+++ b/clean-code-s1e1/style.css
@@ -24,7 +24,7 @@ body {
 .preview { text-align: center;
 }
 }
-.application {
+.app {
   display: block;
   width: 500px;
   margin: 0 auto 0;
@@ -121,12 +121,12 @@ li > label {
 li >    input[type="text"] {
   width: 226px
 }
-button.delete-button img {
+button.delete-btn img {
   height: 2em;
   transform: rotateZ(45deg);
   transition: transform 200ms ease-in;
 }
-button.delete-button img:hover {
+button.delete-btn img:hover {
   transform: rotateZ(0);
 }
 
